--- a/app/src/main/res/layout/activity_bin_game.xml
+++ b/app/src/main/res/layout/activity_bin_game.xml
@@ -12,68 +12,69 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="276dp"
-        android:layout_marginEnd="8dp"
-        android:textColor="#ffffff"
-        android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/buttonsLayout"
-        android:layout_width="395dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="#FFFFFF"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/optionsLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/questionTextView"
-        app:layout_constraintVertical_bias="0.357">
-
-        <Button
-            android:id="@+id/trashButton"
-            android:layout_width="wrap_content"
-            android:layout_height="113dp"
-            android:layout_weight="1"
-            android:background="@drawable/general_waste" />
-
-        <Button
-            android:id="@+id/recycleButton"
-            android:layout_width="wrap_content"
-            android:layout_height="113dp"
-            android:layout_weight="1"
-            android:background="@drawable/recycle_bin" />
-
-        <Button
-            android:id="@+id/organicWasteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="113dp"
-            android:layout_weight="1"
-            android:background="@drawable/food_waste" />
-
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/qImageView"
+        app:layout_constraintVertical_bias="0.483" />
 
     <ImageView
-        android:id="@+id/questionImageView"
+        android:id="@+id/qImageView"
         android:layout_width="168dp"
         android:layout_height="123dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/questionTextView"
+        android:tag="0"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.194" />
 
     <LinearLayout
-        android:id="@+id/buttonTagsLayout"
+        android:id="@+id/optionsLayout"
+        android:layout_width="395dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="150dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/gWBinImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:tag="1"
+            app:srcCompat="@drawable/general_waste" />
+
+        <ImageView
+            android:id="@+id/rBImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:tag="2"
+            app:srcCompat="@drawable/recycle_bin" />
+
+        <ImageView
+            android:id="@+id/oWImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:tag="3"
+            app:srcCompat="@drawable/food_waste" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/optionTagsLayout"
         android:layout_width="395dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -81,7 +82,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonsLayout">
+        app:layout_constraintTop_toBottomOf="@+id/optionsLayout">
 
         <TextView
             android:id="@+id/textView"
