Got a working prototype of the true or false game working with a score keeper. Currently it loops around back to the beginning so need to add a new activity with the correct answers at the end.

--- a/app/src/main/res/layout/activity_trivia_game.xml
+++ b/app/src/main/res/layout/activity_trivia_game.xml
@@ -15,50 +15,65 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/trivia_question"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:textSize="20sp"
-        android:text="Default question"
-        android:padding="8dp"
         android:layout_centerHorizontal="true"
+        android:padding="8dp"
+        android:text="Default question"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25"
-        android:id="@+id/trivia_question"
-        />
+        app:layout_constraintVertical_bias="0.25" />
 
     <Button
-        android:id="@+id/triviaTrueButton"
+        android:id="@+id/trivia_true_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="251dp"
+        android:text="True"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
-        />
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="251dp" />
 
     <Button
-        android:id="@+id/triviaFalseButton"
+        android:id="@+id/trivia_false_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="433dp"
+        android:text="False"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.75"
-        />
+        tools:layout_editor_absoluteX="160dp"
+        tools:layout_editor_absoluteY="433dp" />
+
+    <TextView
+        android:id="@+id/score_string"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Score: "
+        app:layout_constraintStart_toStartOf="@+id/trivia_question"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/score_int"
+        android:text="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toEndOf="@+id/score_string"
+        app:layout_constraintTop_toTopOf="@+id/score_string" />
 
 </android.support.constraint.ConstraintLayout>
