--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -8,39 +8,50 @@ tools:context=".MainMenu"
 tools:layout_editor_absoluteX="8dp"
 tools:layout_editor_absoluteY="8dp">
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:layout_centerVertical="true"
-    android:text="@string/mainMenu"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    tools:context=".MainMenu" />
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="84dp"
+        android:text="@string/mainMenu"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context=".MainMenu" />
 
-<Button
-    android:id="@+id/whichBinButtonX"
-    android:layout_width="187dp"
-    android:layout_height="123dp"
-    android:text="@string/whichBin"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.231" />
+    <Button
+        android:id="@+id/whichBinButtonX"
+        android:layout_width="187dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/whichBin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-<Button
-    android:id="@+id/triviaGameX"
-    android:layout_width="186dp"
-    android:layout_height="100dp"
-    android:text="@string/trivia_game"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.497"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.736" />
+    <Button
+        android:id="@+id/triviaGameX"
+        android:layout_width="187dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="30dp"
+        android:text="@string/trivia_game"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/whichBinButtonX" />
+
+    <Button
+        android:id="@+id/multiplayerGameX"
+        android:layout_width="187dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/multiplayer_game"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/triviaGameX" />
 
 </android.support.constraint.ConstraintLayout>
