--- a/app/src/main/res/layout/activity_trivia_game.xml
+++ b/app/src/main/res/layout/activity_trivia_game.xml
@@ -76,4 +76,25 @@
         app:layout_constraintStart_toEndOf="@+id/score_string"
         app:layout_constraintTop_toTopOf="@+id/score_string" />
 
+    <TextView
+        android:id="@+id/timer_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="2:00"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/timer_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Time Remaining:"
+        app:layout_constraintEnd_toStartOf="@+id/timer_time"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
