--- a/app/src/main/res/layout/activity_trivia_answer.xml
+++ b/app/src/main/res/layout/activity_trivia_answer.xml
@@ -58,7 +58,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Button"
+        android:text="Next Question"
         app:layout_constraintBottom_toTopOf="@+id/main_menu_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.717"
@@ -73,7 +73,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Button"
+        android:text="Previous Question"
         app:layout_constraintBottom_toTopOf="@+id/main_menu_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/answer_info"
