New branch created so that Multiple Choice Game could be added without interfering with the game map level selection.

--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -54,4 +54,16 @@ tools:layout_editor_absoluteY="8dp">
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/triviaGameX" />
 
+    <Button
+        android:id="@+id/multipleChoiceGameX"
+        android:layout_width="187dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/multipleChoice_game"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/multiplayerGameX" />
+
 </android.support.constraint.ConstraintLayout>
