Added a level selection activity and added extra modes to the drag and drop game, so that there's different themes.

--- a/app/src/main/res/layout/activity_bin_game.xml
+++ b/app/src/main/res/layout/activity_bin_game.xml
@@ -87,7 +87,7 @@
         app:layout_constraintTop_toBottomOf="@+id/optionsLayout">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textView_option1_tag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -95,7 +95,7 @@
             android:textAlignment="center" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textView_option2_tag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -103,7 +103,7 @@
             android:textAlignment="center" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textView_option3_tag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
