--- a/app/src/main/res/layout/activity_level_selection.xml
+++ b/app/src/main/res/layout/activity_level_selection.xml
@@ -58,4 +58,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/world1level2" />
 
+    <ImageButton
+        android:id="@+id/imageButton_w2_l1"
+        android:layout_width="130dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="200dp"
+        android:layout_marginBottom="8dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/world2level1" />
+
+    <ImageButton
+        android:id="@+id/imageButton_w2_l2"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="200dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageButton_w2_l1"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton_w1_l2"
+        app:srcCompat="@drawable/world1level2" />
+
 </android.support.constraint.ConstraintLayout>
