--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -8,28 +8,15 @@ tools:context=".MainMenu"
 tools:layout_editor_absoluteX="8dp"
 tools:layout_editor_absoluteY="8dp">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="84dp"
-        android:text="@string/mainMenu"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:context=".MainMenu" />
-
     <Button
         android:id="@+id/whichBinButtonX"
         android:layout_width="187dp"
         android:layout_height="100dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="8dp"
         android:text="@string/whichBin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/levelSelectorButtonX" />
 
     <Button
         android:id="@+id/triviaGameX"
@@ -63,12 +50,10 @@ tools:layout_editor_absoluteY="8dp">
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:text="PLAY!"
-        app:layout_constraintBottom_toTopOf="@+id/whichBinButtonX"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/tiledGameButton"
