--- a/app/src/main/res/layout/activity_level_selection.xml
+++ b/app/src/main/res/layout/activity_level_selection.xml
@@ -14,14 +14,12 @@
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="650dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.03"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498"
         app:srcCompat="@drawable/character_mario" />
 
     <ImageButton
@@ -30,62 +28,133 @@
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="300dp"
+        android:layout_marginBottom="250dp"
         android:adjustViewBounds="true"
         android:background="@null"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.311"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.238"
         app:srcCompat="@drawable/world1level1" />
 
     <ImageButton
         android:id="@+id/imageButton_w1_l2"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="250dp"
         android:background="@null"
         android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.234"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton_w1_l1"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/world1level2" />
 
     <ImageButton
+        android:id="@+id/imageButton_w1_l3"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="250dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageButton_w1_l2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/castle" />
+
+    <ImageButton
         android:id="@+id/imageButton_w2_l1"
-        android:layout_width="130dp"
-        android:layout_height="84dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="200dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="300dp"
         android:layout_marginBottom="8dp"
+        android:adjustViewBounds="true"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton_w3_l1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton_w1_l1"
+        app:srcCompat="@drawable/world1level1" />
+
+    <ImageButton
+        android:id="@+id/imageButton_w2_l2"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton_w3_l2"
+        app:layout_constraintStart_toEndOf="@+id/imageButton_w2_l1"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton_w1_l2"
+        app:srcCompat="@drawable/world1level2" />
+
+    <ImageButton
+        android:id="@+id/imageButton_w2_l3"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton_w3_l3"
+        app:layout_constraintStart_toEndOf="@+id/imageButton_w2_l2"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton_w1_l3"
+        app:srcCompat="@drawable/castle" />
+
+    <ImageButton
+        android:id="@+id/imageButton_w3_l1"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginEnd="300dp"
+        android:layout_marginBottom="8dp"
+        android:adjustViewBounds="true"
         android:background="@null"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/world2level1" />
+        app:srcCompat="@drawable/world1level1" />
 
     <ImageButton
-        android:id="@+id/imageButton_w2_l2"
+        android:id="@+id/imageButton_w3_l2"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="200dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginBottom="8dp"
         android:background="@null"
         android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton_w2_l1"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton_w1_l2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageButton_w3_l1"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/world1level2" />
+
+    <ImageButton
+        android:id="@+id/imageButton_w3_l3"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginBottom="8dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageButton_w3_l2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/castle" />
 
 </android.support.constraint.ConstraintLayout>
