--- a/app/src/main/res/layout/activity_multiple_choice_game.xml
+++ b/app/src/main/res/layout/activity_multiple_choice_game.xml
@@ -77,4 +77,16 @@
             android:tag="4"/>
     </LinearLayout>
 
+    <Button
+        android:id="@+id/button_MCQ_menu"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Back!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
