--- a/app/src/main/res/layout/activity_trivia_game.xml
+++ b/app/src/main/res/layout/activity_trivia_game.xml
@@ -20,16 +20,17 @@
     <TextView
         android:id="@+id/trivia_question"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:padding="8dp"
         android:text="Default question"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintVertical_bias="0.207" />
 
     <Button
         android:id="@+id/trivia_true_button"
