--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -60,12 +60,12 @@ tools:layout_editor_absoluteY="8dp">
         android:layout_width="187dp"
         android:layout_height="100dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/main_game"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/multiplayerGameX" />
+        app:layout_constraintTop_toBottomOf="@+id/multipleChoiceGameX" />
 
     <Button
         android:id="@+id/multipleChoiceGameX"
