--- a/app/src/main/res/layout/activity_level_selection_world_one.xml
+++ b/app/src/main/res/layout/activity_level_selection_world_one.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView_character"
+        android:id="@+id/imageView_character_world_one"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -33,7 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/character_mario" />
+        app:srcCompat="@drawable/puffin32x32" />
 
     <ImageButton
         android:id="@+id/imageButton_w1_l1"
@@ -80,102 +80,6 @@
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton_w1_l2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/castle" />
-
-    <ImageButton
-        android:id="@+id/imageButton_w2_l1"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="300dp"
-        android:layout_marginBottom="8dp"
-        android:adjustViewBounds="true"
-        android:background="@null"
-        android:contentDescription="World 2 Level 1"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton_w3_l1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton_w1_l1"
-        app:srcCompat="@drawable/world1level1" />
-
-    <ImageButton
-        android:id="@+id/imageButton_w2_l2"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@null"
-        android:contentDescription="World 2 Level 2"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton_w3_l2"
-        app:layout_constraintStart_toEndOf="@+id/imageButton_w2_l1"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton_w1_l2"
-        app:srcCompat="@drawable/world1level2" />
-
-    <ImageButton
-        android:id="@+id/imageButton_w2_l3"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@null"
-        android:contentDescription="World 2 Level 3"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton_w3_l3"
-        app:layout_constraintStart_toEndOf="@+id/imageButton_w2_l2"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton_w1_l3"
-        app:srcCompat="@drawable/castle" />
-
-    <ImageButton
-        android:id="@+id/imageButton_w3_l1"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="300dp"
-        android:layout_marginBottom="8dp"
-        android:adjustViewBounds="true"
-        android:background="@null"
-        android:contentDescription="World 3 Level 1"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/world1level1" />
-
-    <ImageButton
-        android:id="@+id/imageButton_w3_l2"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginBottom="8dp"
-        android:background="@null"
-        android:contentDescription="World 3 Level 2"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton_w3_l1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/world1level2" />
-
-    <ImageButton
-        android:id="@+id/imageButton_w3_l3"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginBottom="8dp"
-        android:background="@null"
-        android:contentDescription="World 3 Level 3"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton_w3_l2"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/castle" />
 
