Added titles to level selection screen so that it's easier to identify which world they're currently on. Implemented the play button in the main menu in a way that it would skip dialogue and instruction screen if the user has already seen them.

--- a/app/src/main/res/layout/activity_level_selection_world_three.xml
+++ b/app/src/main/res/layout/activity_level_selection_world_three.xml
@@ -7,6 +7,20 @@
     android:background="@drawable/cloud"
     tools:context=".LevelSelectionWorldThree">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/bubblegum_sans"
+        android:text="World Three"
+        android:textColor="#000000"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/imageView_character_world_three"
         android:layout_width="50dp"
