--- a/app/src/main/res/layout/activity_level_selection_world_one.xml
+++ b/app/src/main/res/layout/activity_level_selection_world_one.xml
@@ -42,7 +42,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="300dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginBottom="150dp"
         android:adjustViewBounds="true"
         android:background="@null"
         android:contentDescription="World 1 Level 1"
@@ -59,7 +59,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginBottom="150dp"
         android:background="@null"
         android:contentDescription="World 1 Level 2"
         android:scaleType="fitCenter"
@@ -74,7 +74,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginBottom="150dp"
         android:background="@null"
         android:contentDescription="World 1 Level 3"
         android:scaleType="fitCenter"
@@ -82,5 +82,19 @@
         app:layout_constraintStart_toEndOf="@+id/imageButton_w1_l2"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/castle" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/bubblegum_sans"
+        android:text="World One"
+        android:textColor="#000000"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
