--- a/app/src/main/res/layout/activity_level_selection_world_two.xml
+++ b/app/src/main/res/layout/activity_level_selection_world_two.xml
@@ -7,6 +7,21 @@
     android:background="@drawable/cloud"
     tools:context=".LevelSelectionWorldTwo">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/bubblegum_sans"
+        android:text="World Two"
+        android:textColor="#000000"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/imageView_character_world_two"
         android:layout_width="50dp"
